k8s/currencies-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencies-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: currencies-app
  replicas: 1
  template:
    metadata:
      name: currencies-app
      labels:
        app: currencies-app
    spec:
      containers:
        - name: currencies-app
          image: mps4dev/currencies:1.0
