k8s/currencies-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencies-postgres
spec:
  selector:
    matchLabels:
      app: currencies-postgres
  template:
    metadata:
      labels:
        app: currencies-postgres
    spec:
      volumes:
        - name: currencies-postgres-storage
          persistentVolumeClaim:
            claimName: currencies-postgres-pvc
      containers:
        - image: library/postgres:9.6
          name: currencies-postgres
          ports:
            - containerPort: 5432
              name: currencies-postgres
          volumeMounts:
            - name: currencies-postgres-storage
              mountPath: /var/lib/postgresql/data
---
apiVersion: v1
kind: Service
metadata:
  name: currencies-postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: currencies-postgres
