k8s/currencies-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currencies-app
  namespace: default
  labels:
    app: currencies-app
spec:
  selector:
    app: currencies-app
    type: ClusterIP
  ports:
    - name: http
      port: 8080
